--- a/doxy/html/index.html
+++ b/doxy/html/index.html
@@ -76,7 +76,7 @@ $(function() {
 <div class="textblock"><h1><a class="anchor" id="autotoc_md0"></a>
 API for level sensor</h1>
 <p>usage:</p><ul>
-<li>at first ini <a href="df/d61/a00031.html">lvl_sens</a> instance of level sensor by call <a href="dd/dad/a00005.html#ab388b1960fa20cb2e0ddc6a8316c5202">Ini_Lvl_sens</a></li>
+<li>at first ini <a href="d0/d33/a00027.html">lvl_sens</a> instance of level sensor by call <a href="dd/dad/a00005.html#ab388b1960fa20cb2e0ddc6a8316c5202">Ini_Lvl_sens</a></li>
 <li>then periodicaly call <a href="dd/dad/a00005.html#a7527fdbdb826936bdf1529357eca12e6">runtimeCycle</a> </li>
 </ul>
 </div></div><!-- PageDoc -->
